# test-backend

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  settings.toml.in
docker/: compose.yaml
docker/server/: Dockerfile
postgresql/: Dockerfile
postgresql/config/: pg_hba.conf  postgresql.conf
postgresql/setup/: copy_config.sh  pg_hba.conf  postgresql.conf
scripts/: build.sh  build_pg_image.sh  build_server_image.sh  build_volume.sh  env.sh  pg_clear.sh  pg_init.sh  pg_setup.sh  pg_start.sh  pg_stop.sh  run.sh  run_debug.sh  run_pg.sh  run_release.sh  run_server.sh  run_test.sh
scripts/pg/: build.sh  build_image.sh  build_volume.sh  env.sh  run.sh  run_container.sh
scripts/server/: build_image.sh  env.sh  run_release.sh
scripts/sql/: clear.sql  setup.sql
server/: Cargo.toml  Dockerfile
server/scripts/: build.sh  run.sh  run_debug.sh  run_release.sh  run_test.sh
server/src/application/: application.rs  application_error.rs  mod.rs
server/src/dto/: session.rs
src/: lib.rs
src/application/: application.rs  application_error.rs  asset_loader.rs  mod.rs  read_file.rs  response.rs  static_response.rs
src/dto/: login.rs  mod.rs  password_hash.rs  session.rs  user.rs  user_dto.rs
src/persistence/: dao_error.rs  mod.rs  pg_params.rs
src/presentation/: json_parse.rs  json_response.rs  login_controller.rs  mod.rs  presentation_error.rs  request.rs  request_extraction.rs  user_controller.rs
src/service/: login_error.rs  mod.rs  service_error.rs  user_service.rs
src/utility/: mod.rs  settings.rs
tests/: user_dao_pg.rs
(+43 files in other folders)
