[package]
name = "test-backend"
version = "0.1.0"
authors = ["Jakob Fischer <JakobFischer93@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
env_logger = "0.6.1"
chrono = "0.4.6"
rand = "0.6.5"
hyper = "0.12.29"
postgres = "0.15.2"
sha2 = "0.8.0"
futures = "0.1.27"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0"
base64 = "0.10.1"
lazy_static = "1.4.0"
config = "0.9.3"

[[bin]]
name = "server_app"
path = "src/bin/main.rs"
